2008-10-08  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/procedurelogger.py:
	* resources/procedures.xsl:
	Keep track of how long it takes for a test to run (#555286, Brian G. Merrell)

2008-09-26  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Add default action logging to typeText,
	  keyCombo, and mouseClick. (#553294, Brian G. Merrell)

	* examples/gcalctool-bug-488226.py: Remove redundant logging in the
	  test script now that the logging is done in the accessible.

2008-08-14  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Bind FontChooser dialog; add logging to
	  previously-bound GtkColorSelectionDialog. (#546865, César Octavio López Natarén)

2008-07-30  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: In TreeTable's select() and activate()
	  methods, and in MenuBar's select() and open() methods, check the path
	  argument and throw a TypeError if the path is not a list. (#545553)

2008-07-30  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Bind actions on-the-fly.  Remove click(),
	  toggle(), and activate() - they will be generated and returned
	  on-the-fly from now on.  Deprecate _doAction(), since it should not
	  longer be required.  (#545388)

2008-07-21  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Bind GtkColorSelectionDialog by adding
	  ColorChooser accessible.  (#544065, César Octavio López Natarén)

2008-07-18  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Add support labelledBy param in generated
	  search functions.  (#543511, César Octavio López Natarén)

2008-07-11  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Add support for radio menu items or menu
	  items with children in MenuBar class.  (#542458, Brian G. Merrell)

2008-07-10  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Have PushButton override __getattr__() to