@@ -1,3 +1,8 @@
+2008-12-02  Brian G. Merrell  <bgmerrell@novell.com>
+
+	* strongwind/accessibles.py: Provide a method that can move the mouse
+	to an accessible without clicking.  (#563039)
+
 2008-10-08  Jonathan Tai  <jon@tgpsolutions.com>
 
 	* strongwind/procedurelogger.py:
